--- a/eye.htm
+++ b/eye.htm
@@ -18,7 +18,7 @@
 	</div>
 </head>
 <body>
-	<div frame class="window" id="frame">
+	<div class="window" id="frame">
 		<div class="hsplit">
 			<div class="left">
 				<picture id="title" src="img/eyeleo_title.png"/>
